--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,7 +1,7 @@
-name: Manual Data Cleanup
+name: Manual Data Cleanup (Local AI)
 
 on:
-  workflow_dispatch: # ボタンで手動実行
+  workflow_dispatch:
 
 jobs:
   cleanup:
@@ -10,27 +10,27 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip' # 二回目以降の高速化
 
       - name: Install dependencies
         run: |
-          pip install google-generativeai requests
+          pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+          pip install transformers pillow requests
 
-      - name: Run Cleanup Script
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      - name: Run Cleanup
         run: python clean_data.py
 
-      - name: Commit Changes
+      - name: Commit and Push
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add collect.json
-          git commit -m "Cleanup: Removed irrelevant images via AI [skip ci]" || echo "No changes"
+          git commit -m "Cleanup: Removed noise with Local CLIP [skip ci]" || echo "No changes"
           git push
